# Edu-bot

./: .env  README.md  README_OPENROUTER.md  README_UI.md  app.py  chat.py  chat_enhanced.py  index.py  pyproject.toml  run_app.bat  server.py  styles.css  vercel.json
.streamlit/: config.toml
chatbot/: pyvenv.cfg
chatbot/Scripts/: activate  activate.bat
utils/: gpt_client.py
