[project]
name = "edubot"
version = "1.0.0"
description = "Student Assistance Chat with AI"
authors = [{name = "Mayank Patel"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "streamlit",
    "python-dotenv",
    "openai"
]

[project.scripts]
app = "streamlit run app.py"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app.py", "chat.py", "styles.css", "utils/*"]

[project.urls]
Homepage = "https://github.com/Mayankpatel-10/Edu-bot"
Repository = "https://github.com/Mayankpatel-10/Edu-bot.git"
Issues = "https://github.com/Mayankpatel-10/Edu-bot/issues"
